WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158428
operationProcessTypeProfilerLogDFG doesn't update topCallFrame
https://bugs.webkit.org/show_bug.cgi?id=158428
Summary
operationProcessTypeProfilerLogDFG doesn't update topCallFrame
Saam Barati
Reported
2016-06-06 11:11:43 PDT
...
Attachments
patch
(1.36 KB, patch)
2016-06-06 11:16 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-06-06 11:13:23 PDT
<
rdar://problem/26571493
>
Saam Barati
Comment 2
2016-06-06 11:16:22 PDT
Created
attachment 280610
[details]
patch
Mark Lam
Comment 3
2016-06-06 11:17:00 PDT
Comment on
attachment 280610
[details]
patch r=me
Mark Lam
Comment 4
2016-06-06 11:17:33 PDT
Comment on
attachment 280610
[details]
patch Any chance you can add a test that catches this issue?
Saam Barati
Comment 5
2016-06-06 11:25:15 PDT
(In reply to
comment #4
)
> Comment on
attachment 280610
[details]
> patch > > Any chance you can add a test that catches this issue?
I'll try to make one before landing.
Saam Barati
Comment 6
2016-06-07 12:44:08 PDT
Comment on
attachment 280610
[details]
patch I spent 30 minutes trying to reproduce this but I can't It's really hart to get this TypeProfilerLog::processLogEntries to call into GC. It can happen, but it's rare.
WebKit Commit Bot
Comment 7
2016-06-07 13:06:29 PDT
Comment on
attachment 280610
[details]
patch Clearing flags on attachment: 280610 Committed
r201768
: <
http://trac.webkit.org/changeset/201768
>
WebKit Commit Bot
Comment 8
2016-06-07 13:06:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug