operationProcessTypeProfilerLogDFG doesn't update topCallFrame https://bugs.webkit.org/show_bug.cgi?id=158428 <rdar://problem/26571493>

Reviewed by Mark Lam.

* dfg/DFGOperations.cpp:


Canonical link: https://commits.webkit.org/176554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201768 268f45cc-cd09-0410-ab3c-d52691b4dbfc